export const snapshot = {};

snapshot[`[table] should set border on columns 1`] = `
  Foo           Bar           Baz          
┌─────────────┐             ┌─────────────┐
│ foo bar baz │ baz         │ beep boop   │
├─────────────┤             ├─────────────┤
│ baz         │ beep boop   │ foo bar baz │
├─────────────┤             ├─────────────┤
│ beep boop   │ foo bar baz │ baz         │
└─────────────┘             └─────────────┘
`;

snapshot[`[table] should set align on columns 1`] = `
┌─────────────┬─────────────┬─────────────┐
│ Foo         │ Bar         │ Baz         │
├─────────────┼─────────────┼─────────────┤
│ foo bar baz │     baz     │   beep boop │
├─────────────┼─────────────┼─────────────┤
│ baz         │  beep boop  │ foo bar baz │
├─────────────┼─────────────┼─────────────┤
│ beep boop   │ foo bar baz │         baz │
└─────────────┴─────────────┴─────────────┘
`;

snapshot[`[table] should set width on columns 1`] = `
┌──────┬──────────────────────┬─────────────┐
│ Foo  │ Bar                  │ Baz         │
├──────┼──────────────────────┼─────────────┤
│ foo  │ baz                  │   beep boop │
│ bar  │                      │             │
│ baz  │                      │             │
├──────┼──────────────────────┼─────────────┤
│ baz  │ beep boop            │ foo bar baz │
├──────┼──────────────────────┼─────────────┤
│ beep │ foo bar baz          │         baz │
│ boop │                      │             │
└──────┴──────────────────────┴─────────────┘
`;

snapshot[`[table] should set padding on columns 1`] = `
┌─────────────────────┬───────────────────┬─────────────────┐
│     Foo             │    Bar            │   Baz           │
├─────────────────────┼───────────────────┼─────────────────┤
│     foo bar baz     │        baz        │     beep boop   │
├─────────────────────┼───────────────────┼─────────────────┤
│     baz             │     beep boop     │   foo bar baz   │
├─────────────────────┼───────────────────┼─────────────────┤
│     beep boop       │    foo bar baz    │           baz   │
└─────────────────────┴───────────────────┴─────────────────┘
`;

snapshot[`[table] should set column options with column method 1`] = `
┌─────────────────────┬──────────────────────────────┬─────────────────────┐
│     Foo             │     Bar                      │     Baz             │
├─────────────────────┼──────────────────────────────┼─────────────────────┤
│     foo bar baz     │             baz              │       beep boop     │
├─────────────────────┼──────────────────────────────┼─────────────────────┤
│     baz             │          beep boop           │     foo bar baz     │
├─────────────────────┼──────────────────────────────┼─────────────────────┤
│     beep boop       │         foo bar baz          │             baz     │
└─────────────────────┴──────────────────────────────┴─────────────────────┘
`;

snapshot[`[table] should call headerValue 1`] = `
┌─────────────┬───────────────┬────────────────────────────────────┬──────────────────┬──────────────────────────┐
│ Header 1: 1 │ Header 2: "2" │ Header 3: 1970-01-01T00:00:01.000Z │ Header 4: /(?:)/ │ Header 5: { foo: "bar" } │
└─────────────┴───────────────┴────────────────────────────────────┴──────────────────┴──────────────────────────┘
`;

snapshot[`[table] should call headerValue and value 1`] = `
┌─────────────┬───────────────┬────────────────────────────────────┬────────────────────────┬──────────────────────────┐
│ Header 1: 1 │ Header 2: "2" │ Header 3: 1970-01-01T00:00:01.000Z │ Header 4: /(?:)/       │ Header 5: { foo: "bar" } │
├─────────────┼───────────────┼────────────────────────────────────┼────────────────────────┼──────────────────────────┤
│ Body 1: "1" │ Body 2: 2     │ Body 3: 3                          │ Body 4: { beep: true } │ Body 5: [ 1 ]            │
├─────────────┼───────────────┼────────────────────────────────────┼────────────────────────┼──────────────────────────┤
│ Body 1: "1" │ Body 2: 2     │ Body 3: "3"                        │ Body 4: { beep: true } │ Body 5: [ 1 ]            │
├─────────────┼───────────────┼────────────────────────────────────┼────────────────────────┼──────────────────────────┤
│ Body 1: "1" │ Body 2: 2     │ Body 3: 3                          │ Body 4: { beep: true } │ Body 5: [ 1 ]            │
└─────────────┴───────────────┴────────────────────────────────────┴────────────────────────┴──────────────────────────┘
`;

snapshot[`[table] should call value 1`] = `
┌───────────────┬───────────┬─────────────┬────────────────────────┬───────────────┐
│ Header 1: "1" │ Body 2: 2 │ Body 3: 3   │ Body 4: { beep: true } │ Body 5: [ 1 ] │
├───────────────┼───────────┼─────────────┼────────────────────────┼───────────────┤
│ Header 1: "1" │ Body 2: 2 │ Body 3: "3" │ Body 4: { beep: true } │ Body 5: [ 1 ] │
├───────────────┼───────────┼─────────────┼────────────────────────┼───────────────┤
│ Header 1: "1" │ Body 2: 2 │ Body 3: 3   │ Body 4: { beep: true } │ Body 5: [ 1 ] │
└───────────────┴───────────┴─────────────┴────────────────────────┴───────────────┘
`;

snapshot[`[table] should call value and headerValue with json data 1`] = `
┌───────────────────────────────────────┬───────────────────────────────────────┬───────────────────────────────────────┬───────────────────────────────────────┐
│ Body 1: {                             │ Body 2: {                             │ Body 3: {                             │ Body 4: {                             │
│   firstName: "Gino",                  │   firstName: "Gino",                  │   firstName: "Gino",                  │   firstName: "Gino",                  │
│   lastName: "Aicheson",               │   lastName: "Aicheson",               │   lastName: "Aicheson",               │   lastName: "Aicheson",               │
│   age: 21,                            │   age: 21,                            │   age: 21,                            │   age: 21,                            │
│   email: "gaicheson0@nydailynews.com" │   email: "gaicheson0@nydailynews.com" │   email: "gaicheson0@nydailynews.com" │   email: "gaicheson0@nydailynews.com" │
│ }                                     │ }                                     │ }                                     │ }                                     │
├───────────────────────────────────────┼───────────────────────────────────────┼───────────────────────────────────────┼───────────────────────────────────────┤
│ Body 1: {                             │ Body 2: {                             │ Body 3: {                             │ Body 4: {                             │
│   firstName: "Godfry",                │   firstName: "Godfry",                │   firstName: "Godfry",                │   firstName: "Godfry",                │
│   lastName: "Pedycan",                │   lastName: "Pedycan",                │   lastName: "Pedycan",                │   lastName: "Pedycan",                │
│   age: 33,                            │   age: 33,                            │   age: 33,                            │   age: 33,                            │
│   email: "gpedycan1@state.gov"        │   email: "gpedycan1@state.gov"        │   email: "gpedycan1@state.gov"        │   email: "gpedycan1@state.gov"        │
│ }                                     │ }                                     │ }                                     │ }                                     │
├───────────────────────────────────────┼───────────────────────────────────────┼───────────────────────────────────────┼───────────────────────────────────────┤
│ Body 1: {                             │ Body 2: {                             │ Body 3: {                             │ Body 4: {                             │
│   firstName: "Loni",                  │   firstName: "Loni",                  │   firstName: "Loni",                  │   firstName: "Loni",                  │
│   lastName: "Miller",                 │   lastName: "Miller",                 │   lastName: "Miller",                 │   lastName: "Miller",                 │
│   age: 24,                            │   age: 24,                            │   age: 24,                            │   age: 24,                            │
│   email: "lmiller2@chron.com"         │   email: "lmiller2@chron.com"         │   email: "lmiller2@chron.com"         │   email: "lmiller2@chron.com"         │
│ }                                     │ }                                     │ }                                     │ }                                     │
└───────────────────────────────────────┴───────────────────────────────────────┴───────────────────────────────────────┴───────────────────────────────────────┘
`;

snapshot[`[table] should call value and headerValue with json data and header 1`] = `
┌───────────────────────────────────────┬───────────────────────────────────────┬───────────────────────────────────────┬───────────────────────────────────────┐
│ Header 1: 1                           │ Header 2: "2"                         │ Header 3: 3                           │ Header 4: "4"                         │
├───────────────────────────────────────┼───────────────────────────────────────┼───────────────────────────────────────┼───────────────────────────────────────┤
│ Body 1: {                             │ Body 2: {                             │ Body 3: {                             │ Body 4: {                             │
│   firstName: "Gino",                  │   firstName: "Gino",                  │   firstName: "Gino",                  │   firstName: "Gino",                  │
│   lastName: "Aicheson",               │   lastName: "Aicheson",               │   lastName: "Aicheson",               │   lastName: "Aicheson",               │
│   age: 21,                            │   age: 21,                            │   age: 21,                            │   age: 21,                            │
│   email: "gaicheson0@nydailynews.com" │   email: "gaicheson0@nydailynews.com" │   email: "gaicheson0@nydailynews.com" │   email: "gaicheson0@nydailynews.com" │
│ }                                     │ }                                     │ }                                     │ }                                     │
├───────────────────────────────────────┼───────────────────────────────────────┼───────────────────────────────────────┼───────────────────────────────────────┤
│ Body 1: {                             │ Body 2: {                             │ Body 3: {                             │ Body 4: {                             │
│   firstName: "Godfry",                │   firstName: "Godfry",                │   firstName: "Godfry",                │   firstName: "Godfry",                │
│   lastName: "Pedycan",                │   lastName: "Pedycan",                │   lastName: "Pedycan",                │   lastName: "Pedycan",                │
│   age: 33,                            │   age: 33,                            │   age: 33,                            │   age: 33,                            │
│   email: "gpedycan1@state.gov"        │   email: "gpedycan1@state.gov"        │   email: "gpedycan1@state.gov"        │   email: "gpedycan1@state.gov"        │
│ }                                     │ }                                     │ }                                     │ }                                     │
├───────────────────────────────────────┼───────────────────────────────────────┼───────────────────────────────────────┼───────────────────────────────────────┤
│ Body 1: {                             │ Body 2: {                             │ Body 3: {                             │ Body 4: {                             │
│   firstName: "Loni",                  │   firstName: "Loni",                  │   firstName: "Loni",                  │   firstName: "Loni",                  │
│   lastName: "Miller",                 │   lastName: "Miller",                 │   lastName: "Miller",                 │   lastName: "Miller",                 │
│   age: 24,                            │   age: 24,                            │   age: 24,                            │   age: 24,                            │
│   email: "lmiller2@chron.com"         │   email: "lmiller2@chron.com"         │   email: "lmiller2@chron.com"         │   email: "lmiller2@chron.com"         │
│ }                                     │ }                                     │ }                                     │ }                                     │
└───────────────────────────────────────┴───────────────────────────────────────┴───────────────────────────────────────┴───────────────────────────────────────┘
`;

snapshot[`[table] should call headerValue and value with Row class 1`] = `
┌─────────────┬───────────────┬────────────────────────────────────┬──────────────────┬──────────────────────────┐
│ Header 1: 1 │ Header 2: "2" │ Header 3: 1970-01-01T00:00:01.000Z │ Header 4: /(?:)/ │ Header 5: { foo: "bar" } │
├─────────────┼───────────────┼────────────────────────────────────┼──────────────────┼──────────────────────────┤
│ Body 1: 1   │ Body 2: "2"   │ Body 3: 1970-01-01T00:00:01.000Z   │ Body 4: /(?:)/   │ Body 5: { foo: "bar" }   │
└─────────────┴───────────────┴────────────────────────────────────┴──────────────────┴──────────────────────────┘
`;

snapshot[`[table] should allow header with array and body with array and row class 1`] = `
┌───────────────────┬───────────────┬────────────────────────────────────┬──────────────────┬──────────────────────────┐
│ Header 1: 1       │ Header 2: "2" │ Header 3: 1970-01-01T00:00:01.000Z │ Header 4: /(?:)/ │ Header 5: { foo: "bar" } │
├───────────────────┼───────────────┼────────────────────────────────────┼──────────────────┼──────────────────────────┤
│ Body 1: 1         │ Body 2: "2"   │ Body 3: 1970-01-01T00:00:01.000Z   │ Body 4: /(?:)/   │ Body 5: { foo: "bar" }   │
├───────────────────┼───────────────┼────────────────────────────────────┼──────────────────┼──────────────────────────┤
│ Body 1: Map(0) {} │ Body 2: "2"   │ Body 3: 1970-01-01T00:00:01.000Z   │ Body 4: /(?:)/   │ Body 5: { foo: "bar" }   │
└───────────────────┴───────────────┴────────────────────────────────────┴──────────────────┴──────────────────────────┘
`;
